レイアウトの修正

--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ footer{
 
     .nav li {
         width: 100%;
-        padding: 10px 20px;
+        padding: 10px 0px;
         border-bottom: 1px solid #26201a;
     }
 
@@ -554,7 +554,7 @@ footer{
 
     .content {
       width: 90%;
-      max-width: 1200px;
+      max-width: 15cm;
       margin: 0 auto;
       font-family: "Yu Gothic", YuGothic, Meiryo;
       line-height: 1.8;
@@ -678,6 +678,10 @@ footer{
     @media screen and (max-width: 768px) {
         .person {
             width: 90%; /* スマホでは横幅90% */
+        }
+        
+        body {
+            padding: 0;
         }
     }
 
