--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,7 @@
 body {
-  font-family: "Yu Gothic", YuGothic, "MS Pゴシック", Meiryo;
+  font-family: "Zen Antique", "Yu Mincho", "游明朝", YuMincho, "Hiragino Mincho ProN", serif;
   font-size: 16px;
+  font-weight: 400;
   background-color: #fbf3ea;
   color: #26201a;
   margin: 0;
